need to fix navbar. Website is responsive on mobile now

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
@@ -10,17 +10,14 @@
   display: none;
 }
 
-
 /* navbar */
-.navbar{
-  background-color: rgb(18, 83, 83);
+.navbar {
+  background-color: rgb(0, 108, 108);
 }
 .logo-img {
-  width: 4vw;
+width: 14vw;
 }
-.nav-links {
-  font-size: 4rem;
-}
+
 
 .hero-section {
   background: linear-gradient(rgba(7, 7, 7, 0.5), rgba(0, 0, 0, 0.1)),
@@ -33,67 +30,81 @@
   background-position: 60%;
 }
 
+
 /* About me section */
 .about-logo {
   width: 4rem;
 }
-.about-thumnail{
+.about-thumnail {
   display: none;
 }
-.toolbox-container{
+.toolbox-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
 }
-.toolBTN{
-  width: 80vw;
-
+.toolBTN-container {
+  display: flex;
+  justify-content: center;
 }
+.toolBTN {
+  width: 50vw;
+}
+
 /* cards */
 .project-section {
   background-color: #0b0c11;
 }
+.project-buttons{
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+}
 .cards-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: auto;
-  grid-column-gap: 10px;
   grid-row-gap: 17px;
-  justify-items: center; 
-}
-.cards-container .card{
-  width: 24rem;
-  max-width: 25rem;
 }
 
-.card-img{
-max-width: 30rem;
-}
-.cards-container a{
+.cards-container a {
   text-decoration: none;
   color: white;
 }
 
 /* contact */
-.contact-links{
+.contact-links {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+}
+.contact-container {
+  height: 40vh;
 }
 
 /* Footer */
 
-.footer{
+.footer {
   background-color: #0b0c11;
   color: white;
 }
-.footer-inner{
+.footer-inner {
   display: flex;
   justify-content: space-between;
 }
+
+
+
+
 @media screen and (max-width: 770px) {
   .cards-container {
     grid-template-columns: 1fr;
+  }
+}
+@media screen and (min-width: 770px) {
+  .about-thumnail {
+    display: block;
   }
 }
 
@@ -103,12 +114,11 @@ max-width: 30rem;
     grid-template-rows: auto;
     grid-column-gap: 10px;
     grid-row-gap: 17px;
-    justify-items: center; 
+    justify-items: center;
   }
 }
 @media screen and (min-width: 1200px) {
   .cards-container {
     grid-template-columns: 1fr 1fr 1fr;
- 
   }
 }
